# MessageCenter

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  readme.txt
cpp/: ClassType.h  MessageBase.h  MessageCenter.cpp  MessageCenter.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageListener.h
csharp/: ClassType.cs  MessageBase.cs  MessageCenter.cs  MessageDispatcher.cs  MessageListener.cs
include/: Dispatcher.h  Listener.h  Message.h  Type.h
src/: Dispatcher.cpp  MessageBase.h  MessageCenter.cpp  MessageCenter.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageListener.h  MessageTypeId.cpp  MessageTypeId.h
test/: main.cpp
